# wormhole

./: Dockerfile.client.safecoin  Dockerfile.client.solana  Tiltfile  wormhole-dev-setup.md
bridge_ui/: .env.sample  README.md  package-lock.json  package.json
bridge_ui/public/: index.html  manifest.json
bridge_ui/src/: App.js  index.js  muiTheme.js  muiThemeLight.js
bridge_ui/src/components/: BackgroundImage.tsx  ButtonWithLoader.tsx  ChainSelect.tsx  Divi.tsx  Footer.tsx  HeaderText.tsx  KeyAndBalance.tsx  NFTOriginVerifier.tsx  NumberTextField.tsx  QEthereumSignerKey.tsx  QKeyAndBalance.tsx  QToggleConnectedButton.tsx  Recovery.tsx  SafecoinCreateAssociatedAddress.tsx  SafecoinWalletKey.tsx  ShowTx.tsx  SmartAddress.tsx  ToggleConnectedButton.tsx  TokenOriginVerifier.tsx  TransactionProgress.tsx
bridge_ui/src/components/Attest/: Create.tsx  WaitingForWalletMessage.tsx
bridge_ui/src/components/Home/: index.tsx
bridge_ui/src/components/HomeReference/: index.tsx
bridge_ui/src/components/Migration/: EvmQuickMigrate.tsx  SafecoinWorkflow.tsx  SolanaQuickMigrate.tsx  SolanaWorkflow.tsx  index.tsx
bridge_ui/src/components/NFT/: Send.tsx  Source.tsx  Target.tsx
bridge_ui/src/components/QuickTransfer/: Send.tsx  (+4 more)
bridge_ui/src/contexts/: EthereumProviderContext.tsx  SafecoinWalletContext.tsx
bridge_ui/src/hooks/: useCheckIfWormholeWrapped.ts  useFetchForeignAsset.ts  useFetchTargetAsset.ts  useGetSourceParsedTokenAccounts.ts  useGetTargetParsedTokenAccounts.ts  useHandleAttest.tsx  useHandleCreateWrapped.tsx  useHandleNFTRedeem.tsx  useHandleRedeem.tsx  useHandleTransfer.tsx  useIsWalletReady.ts  useMetadata.ts  useOriginalAsset.ts  useSafecoinMetaplexData.ts  useSafecoinTokenMap.ts  useSolanaMetaplexData.ts  useSolanaMigratorInformation.tsx  useSyncTargetAddress.ts  useTerraNativeBalances.ts  useTransactionFees.tsx
bridge_ui/src/store/: safecoinTokenSlice.ts  selectors.ts  tokenSlice.ts  transferSlice.ts
bridge_ui/src/utils/: consts.ts  metaplex.ts  safecoin.ts  solana.ts  terra.ts
clients/: .gitignore
clients/nft_bridge/: main.ts  package-lock.json  package.json
clients/safecoin/: main.ts  package-lock.json  package.json  tsconfig.json
clients/safecoin/nft_bridge/: main.ts  package-lock.json  package.json
clients/safecoin/token_bridge/: main.ts  package-lock.json  package.json
clients/solana/: main.ts  package-lock.json  package.json
clients/solana/nft_bridge/: package-lock.json  package.json
clients/solana/token_bridge/: package-lock.json  package.json
clients/token_bridge/: main.ts  package-lock.json  package.json
devnet/: eth-devnet.yaml  node.yaml  safecoin-devnet.yaml  solana-devnet.yaml
ethereum/: .env.template  package.json
ethereum/scripts/: deploy_test_token.js  register_safecoin_chain.js  register_solana_chain.js
lp_ui/src/utils/: metaplex.ts
node/cmd/guardiand/: guardiankey.go  node.go
node/pkg/common/: readiness.go
node/pkg/processor/: processor.go
node/pkg/publicrpc/: publicrpcserver.go
node/pkg/safecoin/: client.go  client_test.go  recovery.go
node/pkg/solana/: client.go
node/pkg/vaa/: structs.go
proto/publicrpc/v1/: publicrpc.proto
safecoin/: Dockerfile  Dockerfile.wasm  devnet_setup.sh
safecoin/bridge/client/: Cargo.toml
safecoin/bridge/client/src/: main.rs
safecoin/bridge/cpi_poster/: Cargo.toml
safecoin/bridge/memmap2-rs/: README.md
safecoin/bridge/program/: Cargo.toml
safecoin/bridge/program/src/: instructions.rs  lib.rs  types.rs  vaa.rs  wasm.rs
safecoin/bridge/program/src/accounts/: bridge.rs  posted_message.rs  posted_vaa.rs  sequence.rs
safecoin/bridge/program/src/api/: governance.rs  initialize.rs  post_message.rs  post_vaa.rs  verify_signature.rs
safecoin/bridge/program/tests/: common.rs  integration.rs
safecoin/bridge/program_stub/: Cargo.toml
safecoin/migration/: Cargo.toml
safecoin/migration/src/: accounts.rs  instructions.rs  types.rs  wasm.rs
safecoin/migration/src/api/: add_liquidity.rs  claim_shares.rs  create_pool.rs  migrate_tokens.rs  remove_liquidity.rs
safecoin/modules/nft_bridge/program/: Cargo.toml
safecoin/modules/nft_bridge/program/src/: accounts.rs  instructions.rs  messages.rs  types.rs  wasm.rs
safecoin/modules/nft_bridge/program/src/api/: complete_transfer.rs  governance.rs  initialize.rs  transfer.rs
safecoin/modules/nft_bridge/program/tests/: common.rs  integration.rs
safecoin/modules/token_bridge/client/: Cargo.toml
safecoin/modules/token_bridge/client/src/: main.rs
safecoin/modules/token_bridge/program/: Cargo.toml
safecoin/modules/token_bridge/program/src/: accounts.rs  instructions.rs  messages.rs  types.rs  wasm.rs
safecoin/modules/token_bridge/program/src/api/: attest.rs  complete_transfer.rs  create_wrapped.rs  governance.rs  initialize.rs  transfer.rs
safecoin/modules/token_bridge/program/tests/: common.rs  integration.rs
safecoin/modules/token_bridge/token-metadata/: Cargo.toml
safecoin/modules/token_bridge/token-metadata/src/: deprecated_processor.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
safecoin/modules/token_bridge/token-vault/: Cargo.toml
safecoin/modules/token_bridge/token-vault/src/: instruction.rs  lib.rs  processor.rs  utils.rs
safecoin/pyth2wormhole/client/: Cargo.toml
safecoin/pyth2wormhole/client/src/: cli.rs  main.rs
safecoin/pyth2wormhole/program/: Cargo.toml
safecoin/pyth2wormhole/program/src/: attest.rs  config.rs  initialize.rs  set_config.rs
safecoin/pyth2wormhole/program/src/types/: mod.rs
safecoin/solitaire/client/: Cargo.toml
safecoin/solitaire/client/src/: lib.rs
safecoin/solitaire/program/: Cargo.toml
safecoin/solitaire/program/src/: error.rs  lib.rs  macros.rs
safecoin/solitaire/program/src/processors/: keyed.rs  peel.rs  persist.rs  seeded.rs
safecoin/solitaire/program/src/types/: accounts.rs  context.rs  layers.rs
safecoin/solitaire/rocksalt/: Cargo.toml
sdk/js/: package-lock.json  package.json
sdk/js/scripts/: copySafecoinWasm.js
sdk/js/src/: index.ts
solana/: Dockerfile  Dockerfile.wasm  devnet_setup.sh
(+66 files in other folders)
