[package]
name = "client"
version = "0.1.0"
authors = ["Stan Drozd <stan@nexantic.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
borsh = "0.9.1"
wormhole-bridge-safecoin = { path = "../program", features = ["client"] }
cpi-poster = { path = "../cpi_poster", features = ["no-entrypoint"] }
clap = "2.33.0"
rand = "0.7.3"
shellexpand = "2.1.0"
safecoin-client = { path = "../../../../Safecoin/client/" }
safecoin-program = { path = "../../../../Safecoin/sdk/program/" }
safecoin-sdk = { path = "../../../../Safecoin/sdk/" }
safecoin-cli-config = { path = "../../../../Safecoin/cli-config/" }
solitaire = { path = "../../solitaire/program" }
solitaire-client = { path = "../../solitaire/client" }
safecoin-clap-utils = { path = "../../../../Safecoin/clap-utils/" }
hex = "0.4.3"