[package]
name = "bridge"
version = "0.1.0"
description = "Wormhole bridge core contract"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "bridge"

[features]
client = ["solitaire/client", "solitaire-client", "no-entrypoint"]
cpi = ["no-entrypoint"]
default = []
wasm = ["no-entrypoint"]
no-entrypoint = ["solitaire/no-entrypoint"]
trace = ["solitaire/trace"]

[dependencies]
borsh = "0.9.0"
byteorder = "1.4.3"
primitive-types = { version = "0.9.0", default-features = false }
sha3 = "0.9.1"
safecoin-program = "=1.7.17"
solitaire-client = { path = "../../solitaire/client", optional = true }
solitaire = { path = "../../solitaire/program" }
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
hex = "*"
rand = "0.7.3"
hex-literal = "0.3.1"
libsecp256k1 = { version = "0.3.5", features = [] }
safecoin-client = "1.7.17"
safecoin-sdk = "=1.7.17"
