[package]
name = "pyth2wormhole-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["pyth2wormhole/client", "bridge/client"]

[dependencies]
borsh = "0.9.0"
clap = "3.0.0-beta.2" # This beta assimilates structopt into clap
env_logger = "0.8.4"
log = "0.4.14"
bridge = {path = "../../bridge/program"}
pyth2wormhole = {path = "../program"}
shellexpand = "2.1.0"
safecoin-client = "=1.7.17"
safecoin-program = "=1.7.17"
safecoin-sdk = "=1.7.17"
solitaire-client = {path = "../../solitaire/client"}
solitaire = {path = "../../solitaire/program"}
