[package]
name = "pyth2wormhole"
version = "0.1.0"
description = "Pyth to Wormhole Safecoin on-chain integration"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "pyth2wormhole"

[features]
default = ["bridge/no-entrypoint"]
client = ["solitaire/client", "solitaire-client", "no-entrypoint"]
trace = ["solitaire/trace", "bridge/trace"]
no-entrypoint = []
wasm = ["no-entrypoint", "wasm-bindgen"]

[dependencies]
bridge = {path = "../../bridge/program"}
solitaire = { path = "../../solitaire/program" }
solitaire-client = { path = "../../solitaire/client", optional = true }
rocksalt = { path = "../../solitaire/rocksalt" }
safecoin-program = "=1.7.17"
borsh = "0.9.0"
# NOTE: We're following bleeding edge to encounter format changes more easily
pyth-client = {git = "https://github.com/pyth-network/pyth-client-rs", branch = "v2"}
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"], optional = true}