[package]
name = "solitaire-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
safecoin-sdk = "=1.7.17"
safecoin-program = "=1.7.17"
solitaire = {path = "../program", features = ["no-entrypoint"]}
borsh = "0.9.0"
