[package]
name = "nft-bridge"
version = "0.1.0"
description = "Created with Rocksalt"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_bridge"

[features]
no-entrypoint = ["solitaire/no-entrypoint", "rand"]
trace = ["solitaire/trace"]
wasm = ["no-entrypoint", "wasm-bindgen"]
client = ["solitaire-client", "solitaire/client", "no-entrypoint"]
cpi = ["no-entrypoint"]
default = []

[dependencies]
wormhole-bridge-safecoin = { path = "../../../bridge/program", features = ["no-entrypoint", "cpi"] }
borsh = "=0.9.1"
bstr = "0.2.16"
byteorder = "1.4.3"
rocksalt = { path = "../../../solitaire/rocksalt" }
solitaire = { path = "../../../solitaire/program" }
sha3 = "0.9.1"
safecoin-program = "*"
safe-token = { version = "=3.2.2", features = ["no-entrypoint"] }
safe-associated-token-account = { version = "1.0.2" }
primitive-types = { version = "0.9.0", default-features = false }
solitaire-client = { path = "../../../solitaire/client", optional = true }
safe-token-metadata = { path = "../../token_bridge/token-metadata" }
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"], optional = true }
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.7.3", optional = true }

[dev-dependencies]
hex = "*"
hex-literal = "0.3.1"
libsecp256k1 = { version = "0.5.0", features = [] }
safecoin-client = "1.8.12"
safecoin-sdk = "=1.8.12"
safe-token = { version = "=3.2.2", features = ["no-entrypoint"] }
safe-token-metadata = { path = "../../token_bridge/token-metadata", features = ["no-entrypoint"] }
