[package]
name = "client"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.40"
borsh = "0.9.1"
token-bridge = { path = "../program", features = ["client"] }
clap = "2.33.0"
rand = "0.7.3"
shellexpand = "2.1.0"
safecoin-client = { path = "../../../../../Safecoin/client/" }
safecoin-program = { path = "../../../../../Safecoin/sdk/program/" }
safecoin-sdk = { path = "../../../../../Safecoin/sdk/" }
safecoin-cli-config = { path = "../../../../../Safecoin/cli-config/" }
solitaire = { path = "../../../solitaire/program" }
solitaire-client = { path = "../../../solitaire/client" }
safecoin-clap-utils = { path = "../../../../../Safecoin/clap-utils/" }
hex = "0.4.3"
safe-token-metadata = { path = "../token-metadata" }