[package]
name = "token-bridge"
version = "0.1.0"
description = "Created with Rocksalt"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_bridge"

[features]
no-entrypoint = ["solitaire/no-entrypoint", "rand"]
trace = ["solitaire/trace"]
wasm = ["no-entrypoint"]
client = ["solitaire-client", "solitaire/client", "no-entrypoint"]
cpi = ["no-entrypoint"]
default = []

[dependencies]
bridge = { path = "../../../bridge/program", features = ["no-entrypoint", "cpi"] }
borsh = "0.9.1"
bstr = "0.2.16"
byteorder = "1.4.3"
rocksalt = { path = "../../../solitaire/rocksalt" }
solitaire = { path = "../../../solitaire/program" }
sha3 = "0.9.1"
safecoin-program = "*"
safe-token = { version = "=3.2.0", features = ["no-entrypoint"] }
primitive-types = { version = "0.9.0", default-features = false }
solitaire-client = { path = "../../../solitaire/client", optional = true }
safe-token-metadata = { path = "../token-metadata" }
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.7.3", optional = true }

[dev-dependencies]
hex = "*"
hex-literal = "0.3.1"
libsecp256k1 = { version = "0.3.5", features = [] }
safecoin-client = "1.7.17"
safecoin-sdk = "=1.7.17"
safe-token = { version = "=3.2.0", features = ["no-entrypoint"] }
safe-token-metadata = { path = "../token-metadata", features = ["no-entrypoint"]  }
