[package]
name = "safe-token-metadata"
version = "0.0.1"
description = "Metaplex Metadata"
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
num-derive = "0.3"
arrayref = "0.3.6"
num-traits = "0.2"
safecoin-program = { path = "../../../../../Safecoin/sdk/program" }
safe-token = { path = "../../../../../safecoin-program-library/token/program/", features = [ "no-entrypoint" ] }
safe-token-vault = { path = "../token-vault", features = [ "no-entrypoint" ] }
thiserror = "1.0"
